# legbot

./: README.md
exo_humanoid/: CMakeLists.txt  package.xml
exo_humanoid/config/: joint_names_exo_humanoid.yaml
exo_humanoid/launch/: display.launch  gazebo.launch
exo_humanoid/meshes/: L_calf.STL  R_calf.STL  R_hip2.STL
exo_humanoid/urdf/: exo_humanoid.csv  exo_humanoid.urdf
exo_humanoid_control/: CMakeLists.txt  package.xml
exo_humanoid_control/MPC/: GaitGenerator.cpp  GaitGenerator.h  MPCLocomotion.cpp  MPCLocomotion.h  MPC_interface.cpp  MPC_interface.h  ProblemSetupAndUpdate.cpp  ProblemSetupAndUpdate.h  RobotStateMpc.cpp  RobotStateMpc.h  SolverMPC.cpp  SolverMPC.h
exo_humanoid_control/WBC/: priority_tasks.cpp  priority_tasks.h  useful_math.cpp  useful_math.h  wbc_priority.cpp  wbc_priority.h
exo_humanoid_control/include/FSM/: FSM.h  FSMState.h  FSMState_TO.h  FSMState_Walking.h
exo_humanoid_control/include/common/: Biped.h  ControlFSMData.h  Filter.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  RobotState.h  StateEstimate.h  StateEstimatorContainer.h  SwingLegController.h  cppTypes.h  pino_kin_dyn.h
exo_humanoid_control/include/common/Math/: orientation_tools.h
exo_humanoid_control/include/interface/: CheatIO.h  CmdPanel.h  HighLevelIO.h
exo_humanoid_control/include/messages/: LowLevelCmd.h  LowlevelState.h
exo_humanoid_control/src/: main.cpp
exo_humanoid_control/src/FSM/: FSM.cpp  FSMState_Passive.cpp  FSMState_TO.cpp  FSMState_Walking.cpp
exo_humanoid_control/src/common/: Biped.cpp  DesiredCommand.cpp  Filter.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  SwingLegController.cpp  pino_kin_dyn.cpp
exo_humanoid_control/src/interface/: CheatIO.cpp
exo_humanoid_description/: CMakeLists.txt  package.xml
exo_humanoid_description/config/: robot_control.yaml
exo_humanoid_description/launch/: exo_humanoid_rviz.launch
exo_humanoid_description/meshes/: L_toe.STL
exo_humanoid_description/xacro/: gazebo.xacro  robot.xacro  transmission.xacro
trac_ik/trac_ik_examples/launch/: exo_humanoid_ik_test.launch
trac_ik/trac_ik_examples/src/: ik_tests.cpp
trac_ik/trac_ik_lib/: CMakeLists.txt
trac_ik/trac_ik_model/: CMakeLists.txt  package.xml
trac_ik/trac_ik_model/launch/: display.launch  gazebo.launch
trac_ik/trac_ik_model/meshes/: L_hip.STL  L_hip2.STL  R_hip.STL  R_toe.STL  trunk.STL
trac_ik/trac_ik_model/rviz/: urdf.rviz
trac_ik/trac_ik_model/urdf/: trac_ik_model.csv  trac_ik_model.urdf
unitree_ros/robots/a1_description/urdf/: a1.urdf
unitree_ros/unitree_gazebo/launch/: exo_biped.launch
unitree_ros/unitree_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
unitree_ros/unitree_gazebo/worlds/: box.world  normal.world  stairs.world
unitree_ros/unitree_legged_control/src/: joint_controller.cpp
