<?xml version="1.0"?>
<package format="2">
    <name>exo_humanoid_control</name>
    <version>0.0.0</version>
    <description>The biped controller package</description>

    <maintainer email="jin013ch@gmail.com">jin</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>genmsg</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_depend>boost</build_depend>
    <build_depend>trac_ik_lib</build_depend>
    <build_depend>orocos_kdl</build_depend>
    <build_depend>liborocos-kdl-dev</build_depend>
    <build_depend>libnlopt-dev</build_depend>
    <build_depend>libnlopt-cxx-dev</build_depend>

    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <exec_depend>boost</exec_depend>
    <exec_depend>orocos_kdl</exec_depend>
    <exec_depend>liborocos-kdl</exec_depend>
    <exec_depend>trac_ik_lib</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>libnlopt-dev</exec_depend>
    <exec_depend>libnlopt0</exec_depend>

    <depend>unitree_legged_msgs</depend>
    <depend>qpoases</depend>
    <depend>cython</depend>
    <depend>python-numpy</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>