<?xml version="1.0"?>
<package format="2">
    <name>exo_humanoid_description</name>
    <version>0.0.0</version>
    <description>The exo_humanoid_description package</description>

    <maintainer email="jin013ch@gmail.com">yiyuc</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
